Ban call of URLEncoder.encode/URLDecoder.decode(String,String)
Use URLEncoder.encode/URLDecoder.decode(String,Charset) instead